--- a/demo/css/defaults.css
+++ b/demo/css/defaults.css
@@ -77,9 +77,17 @@ html, body, #map {
     font-size: 16px;
     cursor: pointer;
     line-height: 70px;
+    margin-right:50px;
+}
+#updateLabel{
+    float: right;
+    font-size: 16px;
+    cursor: pointer;
+    line-height: 70px;
+    
 }
 
-#aboutContainer{
+.show-container{
     position: absolute;
     top: 80px;
     right: 20px;
@@ -87,8 +95,7 @@ html, body, #map {
     visibility: hidden;
     color: #eeeeee;
 }
-
-#aboutTitle{
+.show-Title{
     position: absolute;
     top: 0;
     height: 35px;
@@ -98,7 +105,7 @@ html, body, #map {
     padding-left: 10px;
 }
 
-#aboutContent{
+.show-Content{
     padding-left: 10px;
     position: absolute;
     top: 35px;
