修改点无法显示图标的问题

--- a/demo/css/defaults.css
+++ b/demo/css/defaults.css
@@ -115,6 +115,10 @@ html, body, #map {
     background: rgba(100, 100, 100, 200);
     font-size: 14px;
 }
+#updateContainer #aboutContent
+{
+    height:400px;
+}
 
 .aboutText{
     padding-left: 5px;
